--- a/web/welcomeICEfaces.xhtml
+++ b/web/welcomeICEfaces.xhtml
@@ -19,7 +19,10 @@
     </h:head>
     <h:body styleClass="ice-skin-rime">
         <h:form id="form">
-            <h:outputText value="Welcome to ICEfaces 2"/>
+            <p>Login b&aacute;sico CreativeMeetings</p>
+            <h:inputText id="login" value="#{Usuarios.login}"></h:inputText>
+            <h:inputSecret id="password" value="#{Usuarios.password}"></h:inputSecret>
+            <h:commandButton id="acceder" value="Acceder" action="login"></h:commandButton>
         </h:form>
     </h:body>
     <h:outputStylesheet library="org.icefaces.component.skins" name="rime.css" />
