--- a/web/pruebavalores.xhtml
+++ b/web/pruebavalores.xhtml
@@ -1,8 +1,8 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!--
-    Document   : welcomeICEfaces
-    Created on : 05-ago-2011, 19:34:44
-    Author     : Antonio
+    Document   : pruebavalores
+    Created on : 10-ago-2011, 13:24:21
+    Author     : Zeyckler
 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
@@ -19,10 +19,7 @@
     </h:head>
     <h:body styleClass="ice-skin-rime">
         <h:form id="form">
-            <p>Login b&aacute;sico CreativeMeetings</p>
-            <h:inputText id="login" value="#{usuario.usuario}"></h:inputText>
-            <h:inputSecret id="password" value="#{usuario.contrasena}"></h:inputSecret>
-            <h:commandButton id="acceder" value="Acceder" action="login"></h:commandButton>
+            <h:outputText value="#{usuario.usuario}"></h:outputText>
         </h:form>
     </h:body>
     <h:outputStylesheet library="org.icefaces.component.skins" name="rime.css" />
