--- a/trunk/web/welcomeICEfaces.xhtml
+++ b/trunk/web/welcomeICEfaces.xhtml
@@ -1,9 +1,4 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!--
-    Document   : welcomeICEfaces
-    Created on : 05-ago-2011, 19:34:44
-    Author     : Antonio
--->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
@@ -22,7 +17,7 @@
             <p>Login b&aacute;sico CreativeMeetings</p>
             <h:inputText id="login" value="#{usuario.usuario}"></h:inputText>
             <h:inputSecret id="password" value="#{usuario.contrasena}"></h:inputSecret>
-            <h:commandButton id="acceder" value="Acceder" action="login"></h:commandButton>
+            <!--<h:commandButton id="acceder" value="Acceder" action="login"></h:commandButton>-->
         </h:form>
     </h:body>
     <h:outputStylesheet library="org.icefaces.component.skins" name="rime.css" />
