--- a/trunk/web/welcomeICEfaces.xhtml
+++ b/trunk/web/welcomeICEfaces.xhtml
@@ -15,9 +15,9 @@
     <h:body styleClass="ice-skin-rime">
         <h:form id="form">
             <p>Login b&aacute;sico CreativeMeetings</p>
-            <h:inputText id="login" value="#{usuario.usuario}"></h:inputText>
-            <h:inputSecret id="password" value="#{usuario.contrasena}"></h:inputSecret>
-            <!--<h:commandButton id="acceder" value="Acceder" action="login"></h:commandButton>-->
+            <h:inputText id="login" value="#{Usuarios.usuario}"></h:inputText>
+            <h:inputSecret id="password" value="#{Usuarios.contrasena}"></h:inputSecret>
+            <h:commandButton id="acceder" value="Acceder" action="login"></h:commandButton>
         </h:form>
     </h:body>
     <h:outputStylesheet library="org.icefaces.component.skins" name="rime.css" />
