--- a/trunk/web/welcomeICEfaces.xhtml
+++ b/trunk/web/welcomeICEfaces.xhtml
@@ -9,7 +9,7 @@
       xmlns:ice="http://www.icesoft.com/icefaces/component"
       >
     <h:head>
-        <title>ICEfaces 2</title>
+        <title>Inicio CreativeMeetings</title>
         <link rel="stylesheet" type="text/css" href="./xmlhttp/css/rime/rime.css"/>
     </h:head>
     <h:body styleClass="ice-skin-rime">
