--- a/web/correcto.xhtml
+++ b/web/correcto.xhtml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!--
-    Document   : pruebavalores
-    Created on : 10-ago-2011, 13:24:21
+    Document   : correcto
+    Created on : 17-ago-2011, 14:56:57
     Author     : Zeyckler
 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
@@ -14,12 +14,12 @@
       xmlns:ice="http://www.icesoft.com/icefaces/component"
       >
     <h:head>
-        <title>ICEfaces 2</title>
+        <title>TODO CORRECTO</title>
         <link rel="stylesheet" type="text/css" href="./xmlhttp/css/rime/rime.css"/>
     </h:head>
     <h:body styleClass="ice-skin-rime">
         <h:form id="form">
-            Email Usuario: <h:outputText value="#{usuario.email}"></h:outputText>
+            <h:outputText value="TODO CORRECTO"/>
         </h:form>
     </h:body>
     <h:outputStylesheet library="org.icefaces.component.skins" name="rime.css" />
