--- a/web/correcto.xhtml
+++ b/web/correcto.xhtml
@@ -19,7 +19,7 @@
     </h:head>
     <h:body styleClass="ice-skin-rime">
         <h:form id="form">
-            <h:outputText value="TODO CORRECTO"/>
+            <h:outputText value="#{login.usuario}"/>
         </h:form>
     </h:body>
     <h:outputStylesheet library="org.icefaces.component.skins" name="rime.css" />
