--- a/trunk/web/correcto.xhtml
+++ b/trunk/web/correcto.xhtml
@@ -20,6 +20,8 @@
     <h:body styleClass="ice-skin-rime">
         <h:form id="form">
             <h:outputText value="#{login.usuario}"/>
+            <h:outputText value="#{holaBean.prueba}"/>
+            <h:outputLink value="index.xhtml">VOLVER A INICIO</h:outputLink>
         </h:form>
     </h:body>
     <h:outputStylesheet library="org.icefaces.component.skins" name="rime.css" />
