--- a/trunk/web/registrarempresa.xhtml
+++ b/trunk/web/registrarempresa.xhtml
@@ -46,7 +46,7 @@
                                 </tr>
 
                                 <tr>
-                                    <td><div class="labelslogin"><ice:outputLabel maxlenght="255" for="direccion">Direcci&oacute;n:</ice:outputLabel></div></td>
+                                    <td><div class="labelslogin"><ice:outputLabel  for="direccion">Direcci&oacute;n:</ice:outputLabel></div></td>
                                     <td><div class="inputslogin"><ice:inputText id="direccion" value="#{registraempresa.direccion}" required="true" validator="#{registraempresa.validarDireccion}"></ice:inputText></div></td>
                                     <td><div class="errorformulario"><ice:message id="errordireccion" for="direccion"></ice:message></div></td>
                                 </tr>
