--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -47,7 +47,7 @@
                             <tr>
 
                                 <td><div class="enlaces"><ice:outputLink value="#">Soy un usuario</ice:outputLink></div></td>
-                                <td><div class="enlaces"><ice:outputLink value="#">Soy una empresa</ice:outputLink></div></td>
+                                <td><div class="enlaces"><ice:outputLink value="registrarempresa.xhtml">Soy una empresa</ice:outputLink></div></td>
 
                             </tr>
 
